--- a/client/index.html
+++ b/client/index.html
@@ -7,9 +7,9 @@
     <meta name="description" content="Empowering vulnerable communities through youth leadership, education, and skills development. Join Haleyouth Foundation in transforming communities across Nigeria." />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/assets/haleyouth-logo.png">
-    <link rel="apple-touch-icon" href="/assets/haleyouth-logo.png">
-    <link rel="shortcut icon" href="/assets/haleyouth-logo.png">
+    <link rel="icon" type="image/png" href="/attached_assets/haleyouth-logo.png">
+    <link rel="apple-touch-icon" href="/attached_assets/haleyouth-logo.png">
+    <link rel="shortcut icon" href="/attached_assets/haleyouth-logo.png">
     
     <!-- Google Fonts for Material UI typography -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
